# embedded

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_qemu  readme.md
dev/: docker-compose.yml  qemu.yml
src/: 1-1_endianness.cpp  1-2_Alignment.cpp
src/c_thread_1/: CMakeLists.txt  pthread_1  pthread_1.c
src/cmake_test/test1/: hello.cpp
src/cmake_test1/: CMakeLists.txt
src/pointers/pointer_1/: CMakeLists.txt  ptr_1  ptr_1.c  ptr_2  ptr_2.c  ptr_3  ptr_3.c  ptr_4  ptr_4.c  ptr_5  ptr_5.c  ptr_6.c
src/pointers/pointers_struct_unions/: struct_1.c
